--- a/CIT280CRM/CIT280CRM/Views/Invoice/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Invoice Details</h2>
 
 <div>
-    <h4>Invoice for: @ViewBag.CompanyName</h4>
+    <h4>Invoice for: @ViewBag.CompanyName | @Model.InvoiceDate</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
