--- a/CIT280CRM/CIT280CRM/Views/Invoice/Edit.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Edit.cshtml
@@ -143,8 +143,8 @@
 
             return true;
         } else {
-            alert("Cannot save Line Items: Invalid Invoice ID");
-            return false;
+            alert("This invoice is not saving any Line Items");
+            return true;
         }
     });
 
