--- a/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
@@ -21,11 +21,11 @@
 </p>
 <table class="table" id="invoice_table">
     <tr>
-        <th>@Html.ActionLink("Company Name", "Index", new { sortId = 1 }) <span class="glyphicon glyphicon-sort-by-alphabet"></span></th>
-        <th>@Html.ActionLink("Total Amount", "Index", new { sortId = 2 }) <span class="glyphicon glyphicon-sort-by-order-alt"></span></th>
-        <th>@Html.ActionLink("Purchase Order #", "Index", new { sortId = 3 }) <span class="glyphicon glyphicon-sort-by-order"></span></th>
-        <th>@Html.ActionLink("Invoice Date", "Index", new { sortId = 4 }) <span class="glyphicon glyphicon-sort-by-attributes"></span></th>
-        <th>@Html.ActionLink("Ship Date", "Index", new { sortId = 5 }) <span class="glyphicon glyphicon-sort-by-attributes"></span></th>
+        <th>@Html.ActionLink("Company Name", "Index", new { sortId = 1, searchTerm = ViewBag.filterString }) <span class="glyphicon glyphicon-sort-by-alphabet"></span></th>
+        <th>@Html.ActionLink("Total Amount", "Index", new { sortId = 2, searchTerm = ViewBag.filterString }) <span class="glyphicon glyphicon-sort-by-order-alt"></span></th>
+        <th>@Html.ActionLink("Purchase Order #", "Index", new { sortId = 3, searchTerm = ViewBag.filterString }) <span class="glyphicon glyphicon-sort-by-order"></span></th>
+        <th>@Html.ActionLink("Invoice Date", "Index", new { sortId = 4, searchTerm = ViewBag.filterString }) <span class="glyphicon glyphicon-sort-by-attributes"></span></th>
+        <th>@Html.ActionLink("Ship Date", "Index", new { sortId = 5, searchTerm = ViewBag.filterString }) <span class="glyphicon glyphicon-sort-by-attributes"></span></th>
         <th>Invoice Status</th>
         <th></th>
     </tr>
